<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/root"
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

    </android.support.v7.widget.Toolbar>


    <LinearLayout
        android:id="@+id/inputFields"
        style="@style/AuthFieldContainer">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextLabel">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/name_field"
                style="@style/EditText"
                android:hint="@string/name_hint"
                android:inputType="text"
                android:maxLength="100">

            </android.support.v7.widget.AppCompatEditText>

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextLabel">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/address_field"
                style="@style/EditText"
                android:hint="@string/address_hint"
                android:inputType="text"
                android:maxLength="100">

            </android.support.v7.widget.AppCompatEditText>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextLabel">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/phone_field"
                style="@style/EditText"
                android:hint="@string/phone_hint"
                android:inputType="phone"
                android:maxLength="20">

            </android.support.v7.widget.AppCompatEditText>

        </android.support.design.widget.TextInputLayout>


    </LinearLayout>

    <Button
        android:id="@+id/submitButton"
        style="@style/AuthButton"
        android:layout_below="@+id/inputFields"
        android:text="@string/place_order"/>

</RelativeLayout>