<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:id="@+id/root">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/main_appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/private_padding">

        <TextView
            android:id="@+id/name_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/client_name_title"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/primary_text_size"/>

        <TextView
            android:id="@+id/name_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Сергей"
            android:textColor="@color/colorTextLight"
            android:textSize="@dimen/secondary_text_size"
            android:maxLength="40"
            android:ellipsize="end"
            android:layout_marginBottom="@dimen/private_field_divider"/>

        <TextView
            android:id="@+id/surname_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/client_surname_title"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/primary_text_size"/>


        <TextView
            android:id="@+id/surname_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Валевич"
            android:textColor="@color/colorTextLight"
            android:textSize="@dimen/secondary_text_size"
            android:maxLength="40"
            android:ellipsize="end"
            android:layout_marginBottom="@dimen/private_field_divider"/>


        <TextView
            android:id="@+id/email_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/client_email_title"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/primary_text_size"/>

        <TextView
            android:id="@+id/email_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="romsolog@mail.ru"
            android:textColor="@color/colorTextLight"
            android:textSize="@dimen/secondary_text_size"
            android:maxLength="40"
            android:ellipsize="end"
            android:layout_marginBottom="@dimen/private_field_divider"/>


        <TextView
            android:id="@+id/phone_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/client_phone_title"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/primary_text_size"/>


        <TextView
            android:id="@+id/phone_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="+375296586896"
            android:textColor="@color/colorTextLight"
            android:textSize="@dimen/secondary_text_size"
            android:maxLength="40"
            android:ellipsize="end"
            android:layout_marginBottom="@dimen/private_field_divider"/>


        <TextView
            android:id="@+id/address_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/client_address_title"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/primary_text_size"/>

        <TextView
            android:id="@+id/address_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Шаранговича ул. 45-12"
            android:textColor="@color/colorTextLight"
            android:textSize="@dimen/secondary_text_size"
            android:maxLength="40"
            android:ellipsize="end"
            android:layout_marginBottom="@dimen/private_field_divider"/>

        <TextView
            android:id="@+id/pass_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/client_pass_title"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/primary_text_size"/>

        <TextView
            android:id="@+id/pass_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="12345"
            android:textColor="@color/colorTextLight"
            android:textSize="@dimen/secondary_text_size"
            android:maxLength="40"
            android:ellipsize="end"
            android:layout_marginBottom="@dimen/private_field_divider"/>

    </LinearLayout>



</LinearLayout>